fix: Rename 'Index Definition' to 'Index Details' in the index management drawer header.

--- a/client/src/app/features/base/details/indexes/index-management.component.html
+++ b/client/src/app/features/base/details/indexes/index-management.component.html
@@ -4,7 +4,7 @@
 <p-drawer
   [(visible)]="isDrawerVisible"
   position="right"
-  [header]="isViewMode() ? 'Index Definition' : 'Add Index'"
+  [header]="isViewMode() ? 'Index Details' : 'Add Index'"
   styleClass="!w-150 custom-drawer"
   (onShow)="onEditorOpen()"
   (onHide)="onEditorClose()"
