--- a/client/src/app/features/base/studio/table/pages/table-list/table-list.component.html
+++ b/client/src/app/features/base/studio/table/pages/table-list/table-list.component.html
@@ -102,7 +102,7 @@
         <a
           pRipple
           class="group flex items-center cursor-pointer px-4 py-2 text-surface-700 hover:bg-gray-100 duration-150 transition-colors p-ripple"
-          [class.bg-gray-100]="table.name === tblService.activeTable()?.name"
+          [class.bg-gray-100]="table.name === tableService.activeTable()?.name"
         >
           <div class="flex flex-1 w-full">
             <i class="icon icon-table-2 text-surface-500 mr-2 mt-0.5"></i>
