--- a/client/src/app/features/base/studio/table/pages/table-detail/table-detail.component.html
+++ b/client/src/app/features/base/studio/table/pages/table-detail/table-detail.component.html
@@ -1,6 +1,6 @@
 <column-editor-drawer
   [(visible)]="visibleColumnEditor"
-  [table]="tblService.activeTable()"
+  [table]="tableService.activeTable()"
   [column]="updatedColumn"
   [mode]="updatedColumnMode"
   (onSave)="onColumnSave($any($event))"
