feat: Implement persistent map zoom level in map view using two-way binding for the `open-map` component's zoom property.

--- a/client/src/app/features/base/studio/table/pages/table-detail/views/map-view/map-view.component.html
+++ b/client/src/app/features/base/studio/table/pages/table-detail/views/map-view/map-view.component.html
@@ -91,6 +91,8 @@
 
 <open-map
   [locations]="locations()"
+  [(zoom)]="mapZoom"
+  (zoomChange)="onMapZoomChange()"
   (onMarkerClick)="onMarkerClick($event)"
   toolbarStyleClass="pt-[16px] px-[20px]"
 >
