--- a/client/src/app/features/base/studio/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/studio/table/components/column-editor/column-editor-drawer.component.html
@@ -477,13 +477,29 @@
                 </div>
                 <div class="flex flex-col gap-1">
                   <label for="expression" class="text-sm">Expression</label>
-                  <div class="h-40 border border-surface-300 rounded-md overflow-hidden">
+                  <div
+                    class="h-40 border rounded-md overflow-hidden"
+                    [class.border-red-500]="
+                      expression.invalid && (expression.touched || columnForm.submitted)
+                    "
+                    [class.border-surface-300]="
+                      !expression.invalid || (!expression.touched && !columnForm.submitted)
+                    "
+                  >
                     <formula-editor
                       id="expression"
                       name="expression"
-                      [(doc)]="columnFormData.formula.expression"
+                      [(ngModel)]="columnFormData.formula.expression"
+                      #expression="ngModel"
+                      required
+                      placeholder="Input formula..."
                     />
                   </div>
+                  @if (expression.invalid && (expression.touched || columnForm.submitted)) {
+                    <p-message severity="error" size="small" variant="simple">
+                      Expression is required.
+                    </p-message>
+                  }
                 </div>
               }
             }
