--- a/client/src/app/features/base/studio/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/studio/table/components/column-editor/column-editor-drawer.component.html
@@ -476,7 +476,10 @@
                   <p class="text-surface-500 text-xs">The result type of the formula.</p>
                 </div>
                 <div class="flex flex-col gap-1">
-                  <label for="expression" class="text-sm">Expression</label>
+                  <label for="expression" class="text-sm">
+                    Expression
+                    <i class="icon icon-asterisk text-red-500"></i>
+                  </label>
                   <div
                     class="h-40 border rounded-md overflow-hidden"
                     [class.border-red-500]="
@@ -493,6 +496,7 @@
                       #expression="ngModel"
                       required
                       placeholder="Input formula..."
+                      [columns]="columnNames"
                     />
                   </div>
                   @if (expression.invalid && (expression.touched || columnForm.submitted)) {
