feat: Improve formula field boolean result display and determine effective data types for filter inputs.

--- a/client/src/app/shared/field-system/filter/filter-group/filter-group.component.html
+++ b/client/src/app/shared/field-system/filter/filter-group/filter-group.component.html
@@ -85,7 +85,7 @@
               <div class="flex-grow min-w-[220px]">
                 @let field = getField(it.field);
 
-                @switch (field.dataType) {
+                @switch (getEffectiveDataType(field)) {
                   @case (DataType.LongText) {
                     <textarea
                       pTextarea
