feat: Implement formula autocompletion using CodeMirror's autocompletion extension, replacing inline suggestions and updating editor styling.

--- a/client/src/app/features/base/studio/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/studio/table/components/column-editor/column-editor-drawer.component.html
@@ -483,7 +483,7 @@
                     <i class="icon icon-asterisk text-red-500"></i>
                   </label>
                   <div
-                    class="h-40 border rounded-md overflow-hidden"
+                    class="h-40 border rounded-md"
                     [class.border-red-500]="
                       expression.invalid && (expression.touched || columnForm.submitted)
                     "
