--- a/client/src/app/shared/formula-editor/formula-editor.component.scss
+++ b/client/src/app/shared/formula-editor/formula-editor.component.scss
@@ -2,11 +2,13 @@
   display: flex;
   height: 100%;
   width: 100%;
+  border-radius: inherit;
 
   ::ng-deep {
     .cm-editor {
       height: 100%;
       width: 100%;
+      border-radius: inherit;
 
       &.cm-focused {
         outline: none;
