feat: Add a default read-only input field for unhandled field types in the record editor drawer.

--- a/client/src/app/features/base/studio/table/components/record-editor/record-editor-drawer.component.html
+++ b/client/src/app/features/base/studio/table/components/record-editor/record-editor-drawer.component.html
@@ -177,6 +177,15 @@
               fluid
             />
           }
+          @default {
+            <input
+              pInputText
+              [ngModel]="updatedRecord[field.name]"
+              [readonly]="true"
+              placeholder="N/A"
+              fluid
+            />
+          }
         }
       }
     </div>
