feat: Implement a global loading indicator using an HTTP interceptor and PrimeNG progress spinner.

--- a/client/src/app/features/base/base.component.html
+++ b/client/src/app/features/base/base.component.html
@@ -22,8 +22,16 @@
       </ng-template>
     </p-selectbutton>
   </div>
-  @if (view() === 'studio') {
-    <div right class="flex gap-2 items-center">
+  <div right class="flex gap-2 items-center">
+    @if (loadingService.isLoading()) {
+      <p-progressspinner
+        [style]="{ width: '16px', height: '16px' }"
+        strokeWidth="6"
+        fill="transparent"
+        animationDuration=".8s"
+      />
+    }
+    @if (view() === 'studio') {
       <p-button
         icon="icon icon-book-open-text"
         severity="secondary"
@@ -39,8 +47,8 @@
         [outlined]="true"
         (click)="toggleChatbot()"
       />
-    </div>
-  }
+    }
+  </div>
 </topbar>
 
 <router-outlet></router-outlet>
