--- a/client/src/app/features/base/studio/table/pages/table-detail/views/map-view/map-view.component.html
+++ b/client/src/app/features/base/studio/table/pages/table-detail/views/map-view/map-view.component.html
@@ -91,8 +91,10 @@
 
 <open-map
   [locations]="locations()"
+  [(center)]="mapCenter"
   [(zoom)]="mapZoom"
-  (zoomChange)="onMapZoomChange()"
+  (onMove)="onMapMove()"
+  (onZoom)="onMapZoom()"
   (onMarkerClick)="onMarkerClick($event)"
   toolbarStyleClass="pt-[16px] px-[20px]"
 >
@@ -120,11 +122,6 @@
           <p-divider layout="vertical" class="scale-80" />
         </div>
       } @else {
-        @if (isRecordsLoading()) {
-          <div class="mt-1 mr-4">
-            <p-progress-spinner class="w-4! h-4!" strokeWidth="8" />
-          </div>
-        }
         <p-button severity="secondary" [text]="true" (click)="popover.show($event)">
           <ng-template #content>
             <i class="icon icon-settings"></i>
